# df1

./: .gitignore  CMakeLists.txt  CMakeSettings.json  README.md
df1d/: CMakeLists.txt  main.cpp
df1viewer/: CMakeLists.txt
df1viewer/inc/: df1client.h  mainwindow.h
df1viewer/src/: df1client.cpp  main.cpp  mainwindow.cpp
df1viewer/ui/: mainwindow.ui
libdf1/: CMakeLists.txt
libdf1/inc/: Df1.h  Df1Serial.h
libdf1/src/: Df1.cpp  Df1Serial.cpp  common.cpp  read.cpp  select_fnct.cpp  socket.cpp  write.cpp
